# java-goof

./: .dccache  .gitignore  .heuko.txt.swp  CODEOWNERS  DEPLOY_HEROKU.md  Dockerfile  NovoArquivo.txt  Procfile  README-K8S.md  README.md  SECURITY.md  arquivo.txt  codeowners  docker-compose.yml  eks-calico.sh  k8s-quickstart.sh  k8s-quickstop.sh  kind-init.sh  package-lock.json  pom.xml  pull_request_template.md  pyproject.toml  rapid7config.yaml  rapid7config.yml  readme2  requirements.txt  secret  stackhawk.yml  test.txt  teste-template  web.xml  zip-slip.py
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  dep-check.yml  docker-image.yml  gitleaks.yml  log4shell-goof-server-docker-image.yaml  main.yml  nuclei.yml  push.yml  semgrep.yml  send-payload.yml  snaky-sca.yml  snyk-container.yml  snyk-sca.yml  sonarcloud.yml  test.yml  (+4 more)
exploits/: exploit.txt  file_uploader_dos_30082.py  struts-aliases.sh  struts-exploit.sh  struts_rce_30772.py  tomcat-rce.sh
log4shell-goof/: README.md  pom.xml
reports/: touch.md
todolist-core/: pom.xml
todolist-goof/: DEPLOY_HEROKU.md  Dockerfile  Procfile  README.md  devdel.sh  devrun.sh  docker-compose.yml  pom.xml
todolist-web-common/: pom.xml
todolist-web-grails/: pom.xml
todolist-web-jsf/: pom.xml
todolist-web-play/: pom.xml
todolist-web-servlet-jsp/: pom.xml
todolist-web-springmvc/: pom.xml
todolist-web-struts/: .snyk  pom.xml
todolist-web-tapestry/: pom.xml
todolist-web-wicket/: pom.xml
workflow/: test.yml
(+328 files in other folders)
