[tool.poetry]
name = "pysnyk"
version = "0.9.5"
description = "A Python client for the Snyk API"
authors = [
  "Gareth Rushgrove <garethr@snyk.io>",
]
license = "MIT"
packages = [
  { include = "snyk" },
]
readme = "README.md"
repository = "https://github.com/snyk-labs/pysnyk"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
mashumaro = "^3"
importlib_metadata = "^4.11.2"
retry = "^0.9.2"
deprecation = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-black = "^0.3.12"
pytest-cov = "^3.0.0"
pytest-mypy = "^0.9.1"
mypy = "0.940"
requests-mock = "^1.9.3"
xlsxwriter = "^3.0.3"
pytest-isort = "^3"
black = "^22.1"
types-requests = "^2.27.11"
coverage = "^6.3.2"
types-backports = "^0.1.3"
types-retry = "^0.9.5"
types-setuptools = "^57.4.9"
types-toml = "^0.10.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

